# KalPoly

./: README.md  main.py  pyproject.toml
api/: main.py
dashboard/: index.html  script.js  style.css
src/predmarket/: __init__.py  client.py
src/predmarket/core/: models.py
src/predmarket/kalshi/: rest.py
src/predmarket/model/rest/: __init__.py  exchange.py
src/predmarket/polymarket/: rest.py
tests/: test_client.py  test_models.py
