[project]
name = "predmarket"
version = "0.1.0"
description = "Unified data API for Kalshi and Polymarket. Core schema + clean SDk."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "structlog>=25.4.0",
    "websockets>=15.0.1",
    "yarl>=1.22.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
